--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,14 @@ html {
     scroll-behavior: smooth;
 }
 
+body{
+    width:100%;   
+}
+
 /* Mobile First design */
 
 /* design for header */
+
 .display-3 {
     font-size: larger;
     font-weight: bolder;
@@ -25,6 +30,7 @@ html {
 }
 
 /* design for schedule container */
+
 .time {
     border-top: 1px solid lightgrey;
     border-bottom: 1px solid white;
@@ -33,9 +39,21 @@ html {
 }
 
 .task {
-    background-color: lightgrey;
     border: none;
     border-bottom: 1px solid white;
+    padding: 10px;
+}
+
+.taskPast {
+    background-color: lightgrey;
+}
+
+.taskPresent {
+    background-color: lightcoral;
+}
+
+.taskFuture {
+    background-color: lightgreen;
 }
 
 .save {
